--- a/currency.exchange.project/src/main/resources/application.properties
+++ b/currency.exchange.project/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/currency-exchange?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Quellebis114
+spring.datasource.url=jdbc:mysql://localhost:3306/DB_NAME
+spring.datasource.username=USERNAME
+spring.datasource.password=PASSWORD
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 ##
